--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./extension
 
     steps:
     - name: install deps
@@ -14,10 +17,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: phpize
       run: phpize .
-      working-directory: ./extension
     - name: configure
       run: ./configure
-      working-directory: ./extension
     - name: make
       run: make && make install
-      working-directory: ./extension
