Sudo not necessary in php 7.4 image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,5 @@ jobs:
       working-directory: ./extension
 
     - name: install
-      run: sudo make install
+      run: make install
       working-directory: ./extension
