--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: php-config
+      id: php_config
+      run: php-config --extension-dir
+
     - name: phpize
       run: phpize .
       working-directory: ./extension
@@ -32,3 +36,8 @@ jobs:
     - name: install
       run: make install
       working-directory: ./extension
+
+    - name: upload
+      uses: actions/upload-artifact@v3.0.0
+      with:
+        path: ${{ steps.php_config.outputs.stdout }}/xhprof.so
