--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: php-config
       id: php_config
-      run: php-config --extension-dir
+      run: echo "::set-output name=EXTENSION_DIR::$(php-config --extension-dir)"
 
     - name: phpize
       run: phpize .
@@ -40,4 +40,4 @@ jobs:
     - name: upload
       uses: actions/upload-artifact@v3.0.0
       with:
-        path: ${{ steps.php_config.outputs.stdout }}/xhprof.so
+        path: ${{ steps.php_config.outputs.EXTENSION_DIR }}/xhprof.so
