--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,4 +40,5 @@ jobs:
     - name: upload
       uses: actions/upload-artifact@v3.0.0
       with:
+        name: artifacts-${{ matrix.version }}
         path: ${{ steps.php_config.outputs.EXTENSION_DIR }}/xhprof.so
